--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -8,7 +8,9 @@ on:
 jobs:
   run-e2e-tests:
     runs-on: ubuntu-latest
-    if: github.event.deployment_status.state == 'success'
+    if: |
+      github.event.deployment_status.state == 'success' && 
+      contains(github.event.deployment_status.environment_url, 'gp-ui')
     steps:
       - name: Print Workflow Trigger Event
         env:
