--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -2,7 +2,7 @@ name: E2E Tests
 
 on:
   deployment_status:
-    environment:
+    environments:
       - 'Preview - gp-ui'
       - 'Production - gp-ui'
 jobs:
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     if: |
       github.event.deployment_status.state == 'success' && 
-      contains(github.event.deployment_status.environment_url, 'gp-ui')
+      endsWith(github.event.deployment.repository, 'gp-ui')
     steps:
       - name: Print Workflow Trigger Event
         env:
