--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -36,20 +36,25 @@ jobs:
 
       - name: Capture Deployment URL
         run: |
+          # Debug the available variables
+          echo "Environment: ${{ github.event.deployment_status.environment }}"
+          echo "Target URL: ${{ github.event.deployment_status.target_url }}"
+          echo "Environment URL: ${{ github.event.deployment_status.environment_url }}"
+          
           # For preview deployments
           if [[ "${{ github.event.deployment_status.environment }}" == "Preview - gp-ui" ]]; then
-            # Use the actual deployment URL from Vercel
+            # Get the Vercel preview URL directly from the deployment status
             DEPLOYMENT_URL="${{ github.event.deployment_status.target_url }}"
+            if [[ -z "$DEPLOYMENT_URL" ]]; then
+              DEPLOYMENT_URL="${{ github.event.deployment_status.environment_url }}"
+            fi
             echo "Using preview deployment URL: $DEPLOYMENT_URL"
           else
-            # For production deployments
             DEPLOYMENT_URL="https://goodparty.org"
             echo "Using production URL: $DEPLOYMENT_URL"
           fi
           
-          # Debug output
-          echo "Environment: ${{ github.event.deployment_status.environment }}"
-          echo "DEPLOYMENT_URL = $DEPLOYMENT_URL"
+          echo "Final DEPLOYMENT_URL = $DEPLOYMENT_URL"
           echo "BASE_URL=$DEPLOYMENT_URL" >> $GITHUB_ENV
 
       - name: Checkout test-automation Repository
