--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -34,12 +34,58 @@ jobs:
         run: |
           vercel link --token ${{ secrets.VERCEL_TOKEN }} --yes --project gp-ui --scope good-party
 
-      - name: Capture Deployment URL
+      - name: Wait for gp-ui deployment and capture URL
+        env:
+          GH_TOKEN: ${{ github.token }}
         run: |
-          # Get the Vercel preview URL directly from the deployment status
-          DEPLOYMENT_URL="${{ github.event.deployment_status.target_url }}"
+          BRANCH_NAME="${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}}"
           
-          echo "Using deployment URL: $DEPLOYMENT_URL"
+          # Function to get latest deployment status
+          get_deployment_status() {
+            gh api \
+              -H "Accept: application/vnd.github+json" \
+              "/repos/goodparty/gp-ui/deployments" \
+              -q ".[] | select(.ref == \"$BRANCH_NAME\" and .environment == \"Preview - gp-ui\") | .statuses_url" \
+              | head -n1 \
+              | xargs gh api \
+              -q ".[] | select(.state != null) | .state" \
+              | head -n1
+          }
+          
+          # Wait for deployment to complete (timeout after 5 minutes)
+          echo "Waiting for gp-ui deployment to complete..."
+          TIMEOUT=300
+          while [ $TIMEOUT -gt 0 ]; do
+            STATUS=$(get_deployment_status)
+            echo "Current deployment status: $STATUS"
+            
+            if [ "$STATUS" = "success" ]; then
+              break
+            elif [ "$STATUS" = "failure" ] || [ "$STATUS" = "error" ]; then
+              echo "Deployment failed!"
+              exit 1
+            fi
+            
+            sleep 10
+            TIMEOUT=$((TIMEOUT - 10))
+          done
+          
+          if [ $TIMEOUT -le 0 ]; then
+            echo "Timeout waiting for deployment!"
+            exit 1
+          fi
+          
+          # Get the deployment URL
+          DEPLOYMENT_URL=$(gh api \
+            -H "Accept: application/vnd.github+json" \
+            "/repos/goodparty/gp-ui/deployments" \
+            -q ".[] | select(.ref == \"$BRANCH_NAME\" and .environment == \"Preview - gp-ui\") | .statuses_url" \
+            | head -n1 \
+            | xargs gh api \
+            -q ".[] | select(.state == \"success\") | .target_url" \
+            | head -n1)
+          
+          echo "Found gp-ui deployment URL: $DEPLOYMENT_URL"
           echo "BASE_URL=$DEPLOYMENT_URL" >> "$GITHUB_ENV"
 
       - name: Checkout test-automation Repository
