--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -5,6 +5,10 @@ on:
     environments:
       - 'Preview - gp-ui'
       - 'Production - gp-ui'
+    schedule:
+    # Run at midnight PST (8 AM UTC)
+    - cron: '0 8 * * *'
+    
 jobs:
   run-e2e-tests:
     runs-on: ubuntu-latest
