--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -12,7 +12,9 @@ on:
 jobs:
   run-e2e-tests:
     runs-on: ubuntu-latest
-    if: github.event.deployment_status.state == 'success'
+    if: |
+      github.event.deployment_status.state == 'success' && 
+      github.event.deployment.environment == 'Preview - gp-ui'
     steps:
       - name: Print Workflow Trigger Event
         env:
