--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -5,7 +5,7 @@ on:
     environments:
       - 'Preview - gp-ui'
       - 'Production - gp-ui'
-    schedule:
+  schedule:
     # Run at midnight PST (8 AM UTC)
     - cron: '0 8 * * *'
     
@@ -15,17 +15,12 @@ jobs:
     if: github.event.deployment_status.state == 'success'
     strategy:
       matrix:
-        include:
-          - shard: 1
-            test_files: test-automation/tests/core/**/*.spec.ts
-          - shard: 2
-            test_files: 
-              - test-automation/tests/app/**/*.spec.ts
-              - test-automation/tests/api/**/*.spec.ts
-          - shard: 3
-            test_files: 
-              - test-automation/tests/admin/**/*.spec.ts
-              - test-automation/tests/style/**/*.spec.ts
+        test_files: 
+          - test-automation/tests/core/**/*.spec.ts
+          - test-automation/tests/app/**/*.spec.ts
+          - test-automation/tests/api/**/*.spec.ts
+          - test-automation/tests/admin/**/*.spec.ts
+          - test-automation/tests/style/**/*.spec.ts
       fail-fast: false    # Continue running other shards if one fails
     
     steps:
@@ -80,7 +75,7 @@ jobs:
           npx playwright test ${{ matrix.test_files }}
         env:
           BASE_URL: ${{ env.BASE_URL }}
-          TEST_RUN_NAME: "Playwright Test Run - Shard ${{ matrix.shard }} - Branch: ${{ github.ref_name }} - Commit: ${{ github.sha }}"
+          TEST_RUN_NAME: "Playwright Test Run - Branch: ${{ github.ref_name }} - Commit: ${{ github.sha }}"
           NODE_PATH: ${{ secrets.NODE_PATH }}
           TESTRAIL_API_KEY: ${{ secrets.TESTRAIL_API_KEY }}
           TESTRAIL_API_URL: ${{ secrets.TESTRAIL_API_URL }}
