--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -16,42 +16,27 @@ jobs:
     outputs:
       test_run_id: ${{ steps.create-run.outputs.test_run_id }}
     steps:
-      - name: Checkout test-automation Repository
-        uses: actions/checkout@v4
-        with:
-          repository: thegoodparty/test-automation
-          token: ${{ secrets.GH_PAT_TEST }}
-          
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '16.x'
-          
-      - name: Install Dependencies
-        run: npm install
-        
       - name: Create Test Run
         id: create-run
         run: |
-          # Create a test run using the TestRail API
-          node -e "
-            const { createTestRun } = require('./helpers/testrailHelper');
-            const testRunName = 'Playwright Test Run - Branch: ${{ github.ref_name }} - Commit: ${{ github.sha }}';
-            const testCaseIds = [1, 4, 5, 7, 8, /* ... all your test case IDs ... */];
-            
-            async function createRun() {
-              const runId = await createTestRun(testRunName, testCaseIds);
-              console.log('::set-output name=test_run_id::' + runId);
-            }
-            
-            createRun();
-          "
-        env:
-          TESTRAIL_API_KEY: ${{ secrets.TESTRAIL_API_KEY }}
-          TESTRAIL_API_URL: ${{ secrets.TESTRAIL_API_URL }}
-          TESTRAIL_PROJECT_ID: ${{ secrets.TESTRAIL_PROJECT_ID }}
-          TESTRAIL_URL: ${{ secrets.TESTRAIL_URL }}
-          TESTRAIL_USERNAME: ${{ secrets.TESTRAIL_USERNAME }}
+          response=$(curl -s -u "${{ secrets.TESTRAIL_USERNAME }}:${{ secrets.TESTRAIL_API_KEY }}" \
+            -H "Content-Type: application/json" \
+            -X POST "${{ secrets.TESTRAIL_URL }}/index.php?/api/v2/add_run/${{ secrets.TESTRAIL_PROJECT_ID }}" \
+            -d '{
+              "name": "Playwright Test Run - Branch: ${{ github.ref_name }} - Commit: ${{ github.sha }}",
+              "include_all": true
+            }')
+          
+          # Extract the run ID from the response
+          run_id=$(echo $response | jq -r '.id')
+          
+          if [ -n "$run_id" ]; then
+            echo "Created test run with ID: $run_id"
+            echo "test_run_id=$run_id" >> $GITHUB_OUTPUT
+          else
+            echo "Error creating test run. Response: $response"
+            exit 1
+          fi
 
   run-e2e-tests:
     needs: create-test-run
