--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -97,7 +97,8 @@ jobs:
       - name: Run Playwright Tests
         run: |
           cd test-automation
-          echo "Using test run ID: $TEST_RUN_ID"  # Debug log
+          echo "CI=$CI"
+          echo "TEST_RUN_ID=$TEST_RUN_ID"
           npx playwright test --shard ${{ matrix.shard }}
         env:
           CI: "true"
