Updated e2e-tests workflow

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -43,7 +43,8 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: test-run-id
-          path: test_run_id.txt
+          path: testRunId.txt
+          retention-days: 1
 
   run-e2e-tests:
     needs: create-test-run
