--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -10,44 +10,56 @@ on:
     - cron: '0 8 * * *'
     
 jobs:
-  create-test-run:
+  setup:
     runs-on: ubuntu-latest
     if: github.event.deployment_status.state == 'success'
     outputs:
       test_run_id: ${{ steps.create-run.outputs.test_run_id }}
     steps:
-      - name: Create Test Run
-        id: create-run
-        run: |
-          response=$(curl -s -u "${{ secrets.TESTRAIL_USERNAME }}:${{ secrets.TESTRAIL_API_KEY }}" \
-            -H "Content-Type: application/json" \
-            -X POST "${{ secrets.TESTRAIL_URL }}/index.php?/api/v2/add_run/${{ secrets.TESTRAIL_PROJECT_ID }}" \
-            -d '{
-              "name": "Playwright Test Run - Branch: ${{ github.ref_name }} - Commit: ${{ github.sha }}",
-              "include_all": true
-            }')
-          
-          run_id=$(echo $response | jq -r '.id')
-          echo "Run ID from response: $run_id"
-          
-          if [ -n "$run_id" ]; then
-            echo "test_run_id=$run_id" >> $GITHUB_OUTPUT
-            echo "$run_id" > testRunId.txt
-            echo "Created test run with ID: $run_id"
-          else
-            echo "Error creating test run. Response: $response"
-            exit 1
-          fi
+      - name: Check out test-automation repository
+        uses: actions/checkout@v4
+        with:
+          repository: thegoodparty/test-automation
+          token: ${{ secrets.GH_PAT_TEST }}
 
-      - name: Upload test run ID
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '16.x'
+
+      - name: Install Dependencies
+        run: |
+          cd test-automation
+          npm install
+          npx playwright install --with-deps
+
+      - name: Run Global Setup
+        id: global-setup
+        run: |
+          cd test-automation
+          node -r ts-node/register globalSetup.js
+        env:
+          CI: "true"
+          BASE_URL: ${{ env.BASE_URL }}
+          TESTRAIL_URL: ${{ secrets.TESTRAIL_URL }}
+          TESTRAIL_USERNAME: ${{ secrets.TESTRAIL_USERNAME }}
+          TESTRAIL_API_KEY: ${{ secrets.TESTRAIL_API_KEY }}
+          TESTRAIL_PROJECT_ID: ${{ secrets.TESTRAIL_PROJECT_ID }}
+          TEST_USER_ADMIN: ${{ secrets.TEST_USER_ADMIN }}
+          TEST_USER_ADMIN_PASSWORD: ${{ secrets.TEST_USER_ADMIN_PASSWORD }}
+
+      - name: Upload auth states and test run ID
         uses: actions/upload-artifact@v4
         with:
-          name: testrunid
-          path: testRunId.txt
+          name: test-artifacts
+          path: |
+            test-automation/auth.json
+            test-automation/admin-auth.json
+            test-automation/testRunId.txt
           retention-days: 1
 
   run-e2e-tests:
-    needs: create-test-run
+    needs: setup
     runs-on: ubuntu-latest
     if: github.event.deployment_status.state == 'success'
     strategy:
@@ -56,81 +68,79 @@ jobs:
       fail-fast: false
     
     steps:
-      - name: Print Workflow Trigger Event
-        env:
-          GITHUB_EVENT_CONTEXT: ${{ toJson(github) }}
-        run: |
-          echo "GitHub Event Context: $GITHUB_EVENT_CONTEXT"
-
-      - name: Check out the repository to the runner
+      - name: Check out test-automation repository
         uses: actions/checkout@v4
+        with:
+          repository: thegoodparty/test-automation
+          token: ${{ secrets.GH_PAT_TEST }}
 
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '16.x'
 
-      - name: Install Dependencies for gp-webapp
-        run: npm install
-
-      - name: Install Vercel CLI
-        run: npm install -g vercel
-
-      - name: Link Vercel Project
-        run: |
-          vercel link --token ${{ secrets.VERCEL_TOKEN }} --yes --project gp-ui --scope good-party
-
-      - name: Capture Deployment URL
-        run: |
-          # Get the Vercel preview URL directly from the deployment status
-          DEPLOYMENT_URL="${{ github.event.deployment_status.target_url }}"
-          
-          echo "Using deployment URL: $DEPLOYMENT_URL"
-          echo "BASE_URL=$DEPLOYMENT_URL" >> "$GITHUB_ENV"
-
-      - name: Checkout test-automation Repository
-        uses: actions/checkout@v4
-        with:
-          repository: thegoodparty/test-automation
-          token: ${{ secrets.GH_PAT_TEST }}
-          path: test-automation
-
-      - name: Install Playwright Dependencies in test-automation Repo
+      - name: Install Dependencies
         run: |
           cd test-automation
           npm install
           npx playwright install --with-deps
 
-      - name: Download test run ID
+      - name: Download test artifacts
         uses: actions/download-artifact@v4
         with:
-          name: testrunid
+          name: test-artifacts
           path: test-automation
-
-      - name: Set test run ID
-        run: |
-          cd test-automation
-          TEST_RUN_ID=$(cat testRunId.txt)
-          echo "Test run ID from file: $TEST_RUN_ID"
-          echo "TEST_RUN_ID=$TEST_RUN_ID" >> $GITHUB_ENV
 
       - name: Run Playwright Tests
         run: |
           cd test-automation
-          echo "Using test run ID: $TEST_RUN_ID"
           echo "Running shard ${{ matrix.shard }}/4"
           npx playwright test --shard=${{ matrix.shard }}/4 --reporter=list
         env:
           CI: "true"
-          TEST_RUN_ID: ${{ env.TEST_RUN_ID }}
           BASE_URL: ${{ env.BASE_URL }}
-          TEST_RUN_NAME: "Playwright Test Run - Branch: ${{ github.ref_name }} - Commit: ${{ github.sha }}"
           TEST_WORKER_INDEX: ${{ matrix.shard }}
           TEST_WORKERS_COUNT: 4
-          NODE_PATH: ${{ secrets.NODE_PATH }}
+          SKIP_SETUP: "true"
+          TESTRAIL_URL: ${{ secrets.TESTRAIL_URL }}
+          TESTRAIL_USERNAME: ${{ secrets.TESTRAIL_USERNAME }}
           TESTRAIL_API_KEY: ${{ secrets.TESTRAIL_API_KEY }}
-          TESTRAIL_API_URL: ${{ secrets.TESTRAIL_API_URL }}
           TESTRAIL_PROJECT_ID: ${{ secrets.TESTRAIL_PROJECT_ID }}
+
+  teardown:
+    needs: [setup, run-e2e-tests]
+    if: always()
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out test-automation repository
+        uses: actions/checkout@v4
+        with:
+          repository: thegoodparty/test-automation
+          token: ${{ secrets.GH_PAT_TEST }}
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '16.x'
+
+      - name: Install Dependencies
+        run: |
+          cd test-automation
+          npm install
+
+      - name: Download test artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: test-artifacts
+          path: test-automation
+
+      - name: Run Global Teardown
+        run: |
+          cd test-automation
+          node -r ts-node/register globalTeardown.js
+        env:
+          CI: "true"
+          BASE_URL: ${{ env.BASE_URL }}
           TESTRAIL_URL: ${{ secrets.TESTRAIL_URL }}
           TESTRAIL_USERNAME: ${{ secrets.TESTRAIL_USERNAME }}
           TEST_USER_ADMIN: ${{ secrets.TEST_USER_ADMIN }}
