--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -33,7 +33,6 @@ jobs:
       - name: Run Global Setup
         id: global-setup
         run: |
-          cd test-automation
           node -r ts-node/register globalSetup.js
         env:
           CI: "true"
@@ -77,7 +76,10 @@ jobs:
           node-version: '16.x'
 
       - name: Install Dependencies
-        run: npm install && npx playwright install --with-deps
+        run: |
+          cd test-automation
+          npm install
+          npx playwright install --with-deps
 
       - name: Download test artifacts
         uses: actions/download-artifact@v4
@@ -130,7 +132,6 @@ jobs:
 
       - name: Run Global Teardown
         run: |
-          cd test-automation
           node -r ts-node/register globalTeardown.js
         env:
           CI: "true"
