--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -32,13 +32,14 @@ jobs:
         run: |
           cd test-automation
           npm install
+          npm install ts-node typescript @types/node
           npx playwright install --with-deps
 
       - name: Run Global Setup
         id: global-setup
         run: |
           cd test-automation
-          node -r ts-node/register globalSetup.js
+          npx ts-node globalSetup.js
         env:
           CI: "true"
           BASE_URL: ${{ env.BASE_URL }}
