--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -11,7 +11,7 @@ on:
     
 jobs:
   run-e2e-tests:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest-16-core
     if: github.event.deployment_status.state == 'success'
     steps:
       - name: Print Workflow Trigger Event
