--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "react-csv": "^2.2.2",
     "react-dom": "18.2.0",
     "react-drag-reorder": "^1.2.0",
-    "react-icons": "5.2.1",
+    "react-icons": "^5.5.0",
     "react-image-crop": "^10.1.5",
     "react-inlinesvg": "^4.1.3",
     "react-lite-youtube-embed": "^2.3.52",
