--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -32,19 +32,24 @@ jobs:
           github-token: ${{ secrets.GH_PAT }}
           ec2-image-id: ${{ secrets.EC2_IMAGE_ID }}
           ec2-instance-type: t3.large
+          runner-root-volume-size: 100
           aws-resource-tags: >
             [
               {"Key": "Name", "Value": "github-runner"},
               {"Key": "GitHubRepository", "Value": "${{ github.repository }}"}
             ]
-          runner-root-volume-size: 30
           subnet-id: ${{ secrets.SUBNET_ID }}
           security-group-id: ${{ secrets.SECURITY_GROUP_ID }}
           pre-runner-script: |
             #!/bin/bash
-            # Update package list
+            # Clean up space first
+            sudo apt-get clean
+            sudo rm -rf /var/lib/apt/lists/*
+            sudo rm -rf /usr/share/dotnet
+            sudo rm -rf /usr/local/lib/android
+            sudo rm -rf /opt/ghc
+            # Update and install dependencies
             sudo apt-get update
-            # Install required dependencies
             sudo apt-get install -y ca-certificates fonts-liberation libasound2 libatk-bridge2.0-0 libatk1.0-0 libc6 libcairo2 libcups2 libdbus-1-3 libexpat1 libfontconfig1 libgbm1 libgcc1 libglib2.0-0 libgtk-3-0 libnspr4 libnss3 libpango-1.0-0 libpangocairo-1.0-0 libstdc++6 libx11-6 libx11-xcb1 libxcb1 libxcomposite1 libxcursor1 libxdamage1 libxext6 libxfixes3 libxi6 libxrandr2 libxrender1 libxss1 libxtst6 lsb-release wget xdg-utils
             # Install Node.js if needed
             curl -fsSL https://deb.nodesource.com/setup_18.x | sudo -E bash -
